<resources>
	<string name="advice">We recommend you to use headphones in order to this game.</string>
    <string name="group_name">A game by, Blind Faith Games</string>
    <string name="mode">This application works on portrait mode.</string>
    <string name="interactionMode_select">This is a research project that tries to gather insight on how blind people play games on mobile
	devices and how developers could make games that are not only accessible, but also enjoyable for them. Select an interaction mode depending
	on if you have visual discapacity or not. To select make a long press to select an option</string>
    <string name="interactionMode_select_TTS">This is a research project that tries to gather insight on how blind people play games on mobile
	devices and how developers could make games that are not only accessible, but also enjoyable for them. Select an interaction mode depending
	on if you have visual discapacity or not. To select make a long press to select an option</string>
    <string name="blindMode_label">Blind interaction</string>
    <string name="noBlindMode_label">Standard interaction</string>
    <string name="tts_select">In order to get a better game experience, we recommend you to download the "IVONA Text-to-Speech HQ" synthesizer. Blind Faith Games is not associated or have any relation with IVONA project but we think that is the best
	synthetizer. Would you like to install it?</string>
    <string name="yes_label">Yes</string>
    <string name="no_label">No</string>
    <string name="introMessage">Welcome, please select a difficulty</string>
    <string name="introMainMenu">Main menu Zarodnik, you can navigate through the menu by making simple taps in the different options
    							 and just make a long press to select one of the options below</string>
    <string name="app_name">Zarodnik</string>
    <string name="settingsInitialSpeech">Click any option</string>
    <string name="zarodnik_activity">Zarodnik</string>
    <string name="exitButton">Exit</string>
    <string name="main_title">Zarodnik</string>
    <string name="continue_label">Continue</string>
    <string name="new_game_label">New Game</string>
    <string name="tutorial_label">Game Tips</string>
    <string name="keyConf_label">Key Configuration</string>
    <string name="about_label">About</string>
    <string name="form_label">Form</string>
    <string name="exit_label">Exit</string>
    <string name="about_title">Zarodnik About </string>
    <string name="about_text"> 
        Zarodnik, 2012. \n\n
		
		Zarodnik is part of Blind Faith Games (BFG), a research project about how to deliver eyes-free game experiences that are enjoyable on your Android&#8482; 
		device regardless of your sight capabilities. If you have some time to spare, please help us to improve the game by filling in the feedback form that can be reached from the main menu.\n\n
		
		
		BFG is a project of the e-UCM research group, developed by Gloria Pozuelo and Javier Álvarez.\n
		e-UCM is a research group of the Department of Software Engineering and Artificial Intelligence at the Complutense University of Madrid.\n\n
		
		More info at: <a href="http://blind-faith-games.e-ucm.es">http://blind-faith-games.e-ucm.es</a>\n
		Contact us at: android@e-ucm.es  \n\n  
		
		Music by www.SoundJay.com &amp; www.freesound.org \n\n 
		
		<i>Android is a trademark of Google Inc.</i>

	</string>
    <string name="settings_label">Settings</string>
    <string name="settings_title">Zarodnik settings</string>
    <string name="settings_shortcut">s</string>
    <string name="main_category">Main</string>
    <string name="profiles_category">Profiles</string>
    <string name="custom_profile_category">Custom Profile</string>
    <string name="music_title">Music</string>
    <string name="music_summary">Play background music</string>
    <string name="tts_title">Default TTS</string>
    <string name="tts_summary">Enables voice synthesizer</string>
    <string name="transcription_title">Transcription mode</string>
    <string name="transcription_summary">It shows text that contains the sinthetizer speech</string>
    <string name="blind_interaction_title">Blind Interaction Mode</string>
    <string name="blind_interaction_summary">It adds one more touch to each screen touch event</string>
    <string name="blind_mode_title">Black Screen Mode</string>
    <string name="blind_mode_summary">Allows to use the application without any visual reference in the game and main menu.</string>
    <string name="game_title">Game</string>
    <string name="flags_title">Flags settings</string>
    <string name="flags_shortcut">f</string>
    <string name="synthetizer_title">Synthesizer</string>
    <string name="onup_title">Drag-drop event</string>
    <string name="onup_summary">Enables a shot when the drag-drop event occurs</string>
    <string name="volume_up">Volume Up</string>
    <string name="volume_down">Volume Down</string>
    <string name="home">Home</string>
    <string name="back">Back</string>
    <string name="options">Options</string>
    <string name="search">Search</string>
    <string name="alert_dialog_instructions_TTStext">Dialog</string>
    <string name="main_menu_initial_TTStext">Main menu</string>
    <string name="settings_menu_initial_TTStext">Menu settings. 
			    By tapping on each element on this menu changes and reads an option. Particular in this menu you can
			    find two profile options\: A and B whose activation enables another options on the menu. Of course, 
			    you can continue enabling independently all option on the menu. You will find the next options on this menu\: 
   </string>
    <string name="game_play_initial_TTStext">Game Started! You begin in the middle bottom of the screen. Remember you have 
    to find a prey and avoid the predators. By making a long tap on the scoreboard which is situated at the top of the screeen you can
    listen your score.</string>
    <string name="coordinates_information_button_TTStext">Position</string>
    <string name="key_configuration_menu_initial_TTStext">
			  	Key Configuration. By tapping on your left you could listen the action descriptions
			     and by tapping on your right you will change the key related 
			    by an action. If you are in blind interaction mode you have to do a long click
			     to be able to change the configuration. You have the next options\: 
    </string>
    <string name="keydialog">Action configuration</string>
    <string name="keydialog_text">Press any key</string>
    <string name="button_speak_record">Play record in game</string>
    <string name="button_repeat">To repeat the last sinthetizer voice message</string>
    <string name="recordSpeech">Your actual record is</string>
    <string name="counterSpeech">Your actual count is</string>
    <string name="newRecordSpeech">New record!</string>
    <string name="scoreboard_success">Your punctuaction have been incremented to </string>
    <string name="scoreboard_fail">Your punctuaction have been decremented to </string>
    <string name="scoreboard_reset">Your number of consecutive shots is zero.</string>
    <string name="ranking_title">Previous games ranking</string>
    <string name="ranking_speech">Time, date and record</string>
    <string name="dialog_select">Select controls or general instructions</string>
    <string name="initial_message">Ready... Go!</string>
    <string name="ending_lose_message">Game Over</string>
    <string name="ending_win_message">You found your prey</string>
    <string name="intro_game_text">
        Once upon a time, there was a little monster from an unknown place. It used to be called Zarodnik and it was involved in a trip under the depths of the ocean.
        While it was travelling it found a lot of varieties of creatures and learnt many survival aspects. One day, our hero reach one of the biggest ocean of the world, Izlude. 
        Izlude was the best ocean that a marine creature can imagine with enough food to live forever, but when Zarodnik arrived, Izlude was been slaughtered by a new race of
        monsters\: the Strouf. The Obeaune which were the race that used to live in Izlude during the last centuries became slaves of the Strouf or been killed. Now, the Strouf
        have taken the control of Izlude, the place where our hero has just arrived. Zarodnik is now involved in this adventure where it will try to save as many Obeaunes as it can
        by saving it in its belly... But our main character has a limited stomach. What will you do to help it?</string>
    <string name="intro_game_tts">
        Once upon a time, there was a little monster from an unknown place. It used to be called Zarodnik and it was involved in a trip under the depths of the ocean.
        While it was travelling it found a lot of varieties of creatures and learnt many survival aspects. One day, our hero reach one of the biggest ocean of the world, Izlude. 
        Izlude was the best ocean that a marine creature can imagine with enough food to live forever, but when Zarodnik arrived, Izlude was been slaughtered by a new race of
        monsters\: the Strouf. The Obeaune which were the race that used to live in Izlude during the last centuries became slaves of the Strouf or been killed. Now, the Strouf
        have taken the control of Izlude, the place where our hero has just arrived. Zarodnik is now involved in this adventure where it will try to save as many Obeaunes as it can
        by saving it in its belly... But our main character has a limited stomach. What will you do to help it?
    </string>
    <string name="game_over_text">The game concludes here </string>
    <string name="game_over_tts">The game concludes here. Long touch on the screen to end</string>
    <string name="screen_change_begins">Screen change begun.</string>
    <string name="screen_change_ends">Screen change ended.</string>
    <string name="instruction_speech">Long click to back to the main menu</string>
    <string name="key_conf_fail">Not a valid key</string>
    <string name="key_conf_success">You have changed the key associated with</string>
    <string name="tutorial_warning">If you want to leave this information page make a long touch on the screen.</string>
    <string name="tutorial00_intro">On this screen you will learn the sounds related with the game elements. Remember! 
    At this screen, you can make a double tap on the different positions of the screen to listen different sounds.</string>
    <string name="tutorial00_predator">That sound represents a Strouf which is the powerful creature that have take over the ocean of Izlude.
   	You must avoid this creatures or you will be killed.</string>
    <string name="tutorial00_prey">That sound represents an Obeaune, the weakness creature. Only a few have survive. Your
	task is to find and save as many Obeaunes as you can store in Zarodnik. But caution, if you save a lot of them you will
	grow more and more and avoid the Stroufs will be harder. </string>
    <string name="tutorial01_radio"> That sound represents an emitter lotam. Rest of an ancient civilitation previous to obeaune. It
	will help you to know the direction where the obeaune are localizated.</string>
    <string name="tutorial02_chainfish">
    That sound represents a legendary Chainfish. This mysterious creature lives in Izlude and it said
    that the one who eat it would be able to avoid Strouf\'s attacks temporaly.</string>
    <string name="tutorial03_capsule">That sound represents a Dr. Konstantin that allows you to rescue more Obeaune and
     decreasing the player size.</string>
    <string name="tutorial04_instructions">To move Zarodnik, you have to drag your finger on the screen and when you release the touch, everything on the screen 
    will be paused until the next touch. Make a double tap to listen the sound emitted by our hero when it\'s moving.</string>
</resources>